--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "convert": "^4.14.0",
     "js-convert-case": "^4.2.0",
     "marked": "^11.0.0",
+    "mediaelement": "^7.0.2",
     "nanostores": "^0.9.5",
     "rehype-external-links": "^3.0.0",
     "tailwindcss": "^3.3.5",
